@startuml
class wordFrequencyFinder {
    +getWordFrequency(String fileContent)
    +Map<String, Integer> mp
    +String[] arr
    +String s
    +mp.containsKey(s)
    +mp.put(s)
    +mp.get(s)
    +mp.entrySet()
    +entry.getKey()
    +entry.getValue()
}

class fileConverter {
    +Scanner scanner
    +String content
    +readFileIntoString(String path, Charset encoding)
}

class App {
    +String filePath
    +String fileContent
    +readFileIntoString(filePath, StandardCharsets.UTF_8)
    +fileContent.replaceAll("(\\r\\n\\t)", " ")
    +fileContent.replaceAll("\\s+"," ").trim()
    +getWordFrequency(fileContent)
}

fileConverter <|-- App
wordFrequencyFinder <|-- fileConverter
@enduml